--- a/src/main/resources/templates/reporting/reporting.vm
+++ b/src/main/resources/templates/reporting/reporting.vm
@@ -97,7 +97,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:reportin
                 </div>                
                 <div class="aui-page-header-actions">
 					<div class="aui-buttons">
-						<button class="aui-button aui-button-subtle"  type="button" name="setting" onclick="location.href='JiraTimetrackerReportingUserSettingsWebAction!default.jspa'">
+						<button class="aui-button aui-button-light"  type="button" name="setting" onclick="location.href='JiraTimetrackerReportingUserSettingsWebAction!default.jspa'">
 							<span class="aui-icon aui-icon-small aui-iconfont-configure"> </span>
 						</button>
 					</div>
