--- a/src/main/resources/templates/reporting/missing_worklogs_report.vm
+++ b/src/main/resources/templates/reporting/missing_worklogs_report.vm
@@ -74,7 +74,9 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:missing_
          </span>
       </div>
       <div class="aui-page-header-main">
-          <a href="#reporting_menu" aria-owns="reporting_menu" aria-haspopup="true" class="h1-button aui-button aui-button-link aui-style-default aui-dropdown2-trigger"><h1>Missing Days Report</h1></a>
+        <h1>
+          <span>Missing Days Report</span>
+          <a href="#reporting_menu" aria-owns="reporting_menu" aria-haspopup="true" class="aui-button aui-button-link aui-style-default aui-dropdown2-trigger">$i18n.getText("jtrp.select.report")</a>
           <div id="reporting_menu" class="aui-style-default aui-dropdown2" style="top: 150px">
             <ul class="aui-list-truncate">
               <li><a href="ReportingWebAction!default.jspa">Reporting</a></li>
@@ -82,6 +84,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:missing_
               <li><a href="JiraTimetrackerTableWebAction!default.jspa">Table Report</a></li>
             </ul>
           </div>
+        </h1>
         </div>
      </div>
   </header>
