--- a/src/main/resources/templates/reporting/table_report.vm
+++ b/src/main/resources/templates/reporting/table_report.vm
@@ -63,7 +63,9 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:table_re
          </span>
       </div>
       <div class="aui-page-header-main">
-          <a href="#reporting_menu" aria-owns="reporting_menu" aria-haspopup="true" class="h1-button aui-button aui-button-link aui-style-default aui-dropdown2-trigger"><h1>Table Report</h1></a>
+        <h1>
+          <span>Table Report</span>
+          <a href="#reporting_menu" aria-owns="reporting_menu" aria-haspopup="true" class="aui-button aui-button-link aui-style-default aui-dropdown2-trigger">$i18n.getText("jtrp.select.report")</a>
           <div id="reporting_menu" class="aui-style-default aui-dropdown2" style="top: 150px">
             <ul class="aui-list-truncate">
               <li><a href="ReportingWebAction!default.jspa">Reporting</a></li>
@@ -71,6 +73,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:table_re
               <li><a href="JiraTimetrackerChartWebAction!default.jspa">Chart Report</a></li>
             </ul>
           </div>
+        </h1>
         </div>
      </div>
   </header>
