Implement update notifier, add to time tracker page.

--- a/src/main/resources/templates/timetracker/jttp.vm
+++ b/src/main/resources/templates/timetracker/jttp.vm
@@ -58,7 +58,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 		);
 	})(everit.jttp.main, AJS.$);
 </script>
-
+#parse("templates/common/updatenotifier.vm")
       <header class="aui-page-header">
         <div class="aui-page-header-inner">
           <div class="aui-page-header-image">
