Continue implementing update notifier.
Add update Notifier to reporting pages. Add exception class and
exception handling to update. Add JUnit test for the updater.

--- a/src/main/resources/templates/reporting/chart_report.vm
+++ b/src/main/resources/templates/reporting/chart_report.vm
@@ -68,7 +68,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:chart_re
 	#enable_html_escaping()
 
 </script>
-
+  #parse("templates/common/updatenotifier.vm")
   <header class="aui-page-header">
     <div class="aui-page-header-inner">
       <div class="aui-page-header-image">
