--- a/src/main/resources/templates/reporting/reporting.vm
+++ b/src/main/resources/templates/reporting/reporting.vm
@@ -74,6 +74,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:reportin
     </script>
 
    <section id="content" role="main">
+   #parse("templates/common/updatenotifier.vm")
         <header class="aui-page-header">
             <div class="aui-page-header-inner">
                 <div class="aui-page-header-image">
