--- a/src/main/resources/templates/reporting/missing_worklogs_report.vm
+++ b/src/main/resources/templates/reporting/missing_worklogs_report.vm
@@ -61,7 +61,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:missing_
 		);
 	})(everit.jttp.missing_days_report, AJS.$);
   </script>
-	
+	  #parse("templates/common/updatenotifier.vm")
   <header class="aui-page-header">
     <div class="aui-page-header-inner">
       <div class="aui-page-header-image">
