--- a/src/main/resources/templates/timetracker/jttp.vm
+++ b/src/main/resources/templates/timetracker/jttp.vm
@@ -50,7 +50,6 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 				loggedDays : ${loggedDays},
 				isDurationSelected : ${isDurationSelected},
 				projectsId : ${projectsId},
-				isPopup : ${isPopup},
 				issueKey : '${issueKey}',
 				comment: '${comment}',
 				actionFlag: '${actionFlag}',
@@ -96,44 +95,11 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
                 #end
               </div>
             #end
-            <div class="jttp-headline">
-              <div class="aui-group aui-group-split">
-                 <div class="aui-item">
-                   <div class="jttp-headline-progress" id="jttp-headline-progress">
-                     <div class="jttp-headline-progress-date" id="jttp-headline-progress-date">${dateFormatted}</div>
-                     <div class="jttp-headline-progress-number" id="jttp-headline-progress-number">$daySumIndustryFormatted / $hoursPerDayFormatted</div>
-                     <div id="jttp-headline-progress-bar">
-                       <div id="jttp-headline-progress-indicator" class="aui-progress-indicator" data-jttp-percent="$dailyPercent">
-                         <span class="aui-progress-indicator-value" />
-                       </div>
-                     </div>
-                   </div>
-                 </div>
-                 <div class="aui-item">
-                   <form class="aui top-label" id="jttp-datecahnge-form" method="get" action="JiraTimetrackerWebAction.jspa" onsubmit="return everit.jttp.main.beforeSubmitChangeDate();">
-                     <div class="buttons-container" id="jttp-headline-day-stepper-container">
-                       <button id="jttp-headline-day-calendar" class="aui-button" title="Pick a date">
-                         <span class="aui-icon aui-icon-small aui-iconfont-calendar">Open calendar</span>
-                       </button>
-                       <div class="aui-buttons stepper-group-container">
-                         <button id="jttp-headline-day-prev" class="aui-button" title="Previous day" type="submit" id="dayBack"  name="dayBack" >
-                           <span class="aui-icon aui-icon-small aui-iconfont-arrows-left">Previous day</span>
-                         </button>
-                         <button class="aui-button button-today" id="today" name="today" title="$i18n.getText('plugin.today.button')"> 
-                            Today
-                         </button>
-                         <button id="jttp-headline-day-next" class="aui-button" title="Next day" type="submit" id="dayNext" name="dayNext">
-                           <span class="aui-icon aui-icon-small aui-iconfont-arrows-right">Next day</span>
-                         </button>>
-                       </div>
-                       <input type="text" id="dateHidden" name="dateHidden" style="display: none" onchange="this.form.datesubmit.click()" />
-                       <input type="submit" id="datesubmit" name="datesubmit" class="spaced" style="display: none"/>
-                     </div>
-                   </form>
-                 </div>
-              </div>
-            </div>
 
+        #parse("templates/timetracker/jttp-head.vm")
+        #if(!$isProgressDaily)
+          #parse("templates/timetracker/summary.vm")
+        #end
         <!-- Dont forget the "No data to display" message -->
         #parse("templates/timetracker/list.vm")
 
