--- a/src/main/resources/css/update_notifier.css
+++ b/src/main/resources/css/update_notifier.css
@@ -13,13 +13,26 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-.update-notification-banner
-{ background-color: #ebad11; text-align: center; color: white; }
-.update-notification-banner span
-{ padding-right: 0.5rem; }
-.update-notification-banner-content
-{ padding: 0.3rem 0rem; }
-.version-link
-{ color: white; cursor: pointer; }
-.close-update-banner
-{ float: right; cursor: pointer; }
+.update-notification-banner {
+	background-color: #ebad11;
+	text-align: center;
+	color: white;
+}
+
+.update-notification-banner span {
+	padding-right: 0.5rem;
+}
+
+.update-notification-banner-content {
+	padding: 0.3rem 0rem;
+}
+
+.version-link {
+	color: white;
+	cursor: pointer;
+}
+
+.close-update-banner {
+	float: right;
+	cursor: pointer;
+}
