v2.x-JIRAPLUGIN-317-ROUND_REMAINING_CHECKBOX
Temporary changes

--- a/src/main/resources/templates/timetracker/jttp.vm
+++ b/src/main/resources/templates/timetracker/jttp.vm
@@ -54,6 +54,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 				comment: '${comment}',
 				actionFlag: '${actionFlag}',
 				worklogSize: ${worklogs.size()},
+				isRounding : ${isRounding},
 			}
 		);
 	})(everit.jttp.main, AJS.$);
